add ending and change file structure

--- a/src/data/Залицяння.md
+++ b/src/data/Залицяння.md
@@ -57,7 +57,7 @@
 
     Відео:
 
-    -   Передача «Говори» Про утворення сім’ї Грунтковських: https://www.youtube.com/watch?v=H6eseM3OQ0M
-    -   Проект «Поговоримо про сім’ю». Фільм «Розуміння»: https://www.youtube.com/watch?v=HNBz6goEyZ8
-    -   Короткометражний фільм про залицяння «Підтвердження»: https://youtu.be/SMFM4Jb4w78
-    -   Художній фільм «Любов приходить тихо» 2 ч.: https://www.youtube.com/watch?v=l0vHs4nAPIg
+    -   [Передача «Говори» Про утворення сім’ї Грунтковських](https://www.youtube.com/watch?v=H6eseM3OQ0M)
+    -   [Проект «Поговоримо про сім’ю». Фільм «Розуміння»](https://www.youtube.com/watch?v=HNBz6goEyZ8)
+    -   [Короткометражний фільм про залицяння «Підтвердження»](https://youtu.be/SMFM4Jb4w78)
+    -   [Художній фільм «Любов приходить тихо» 2 ч.](https://www.youtube.com/watch?v=l0vHs4nAPIg)
