--- a/src/data/Заручини.md
+++ b/src/data/Заручини.md
@@ -40,4 +40,4 @@
 
     Відео:
 
-    -   Фільм «Божественне народження» https://www.youtube.com/watch?v=gu76HTJgxLI
+    -   [Фільм «Божественне народження](https://www.youtube.com/watch?v=gu76HTJgxLI)
