--- a/src/data/Знайомство.md
+++ b/src/data/Знайомство.md
@@ -51,9 +51,9 @@
 
     Стаття:
 
-    -   «Чи варто християнам звертатись у службу знайомств?» https://www.gotquestions.org/Ukrainian/Ukrainian-Christian-dating-service.html
+    -   [«Чи варто християнам звертатись у службу знайомств?»](https://www.gotquestions.org/Ukrainian/Ukrainian-Christian-dating-service.html)
 
     Відео:
 
-    -   Фільм «Рут». https://bogvideo.com/movies/kniga-ruf-puteshestvie-veryi-the-book-of-ruth-journey-of-faith/
-    -   Фільм «Табір, кльові хлопці». https://bogvideo.com/movies/lager-klevye-rebyata-2017/
+    -   [Фільм «Рут»](https://bogvideo.com/movies/kniga-ruf-puteshestvie-veryi-the-book-of-ruth-journey-of-faith/)
+    -   [Фільм «Табір, кльові хлопці»](https://bogvideo.com/movies/lager-klevye-rebyata-2017/)
