--- a/src/data/Пропозиція.md
+++ b/src/data/Пропозиція.md
@@ -1,59 +1,44 @@
 -   ### Цінність етапу
 
-    З цього все розпочинається. Це подібно до того, як сіється насіння, не означає, що обов’язково щось виросте, але без сіяння не буває урожаю.
+    Це момент, до якого готуються, зазвичай хлопці, щоб прямо освідчитись у своїх намірах утворення сім’ї.
 
 -   ### Особливості етапу
 
-    -   Бог дав величезні можливості для знайомства!
-
-        1. Території для знайомства:
-
-            - Двір, садочок, школа, ВУЗ, робота.
-            - Церковні зібрання, табори, фестивалі, конференції.
-            - Випадкові зустрічі.
-            - Інтернет.
-
-        2. Інструменти для знайомства:
-            - Природнє прагнення хлопців завоювати дівчину.
-            - Природня привабливість дівчат і бажання сподобатись хлопцям.
-            - Наші успіхи. Люди захоплюються успіхами інших.
-            - Наші труднощі чи невдачі. У людей виникає співчуття.
-
-    -   Головні правила знайомства:
-
-        1. Щиро цікався людиною. Ім’я, коло друзів, інтереси, діяльність.
-        2. Можна запитати про дозвіл на подальше спілкування. Для молоді сьогодні є території для невимушеного спілкування через месенджери і соціальні мережі. Проте не варто цим зловживати.
+    -   Це своєрідна точка неповернення, після якої запускаються процеси, які ведуть до шлюбу. Це подібно до їзди на санчатах з гори, коли рушили вниз, вже важко зупинитись.
+    -   Як правило хлопець до цієї пори має чітко визначитись з розумінням волі Божої і впевнено запропонувати дівчині стати для неї чоловіком у недалекому майбутньому.
+    -   Не варто робити пропозицію, якщо не планується вступати у шлюб найближчий рік.
+    -   Дівчата зазвичай мають дати чітку відповідь «ТАК», або «НІ».
+    -   Щоб уникнути поспішності, нормально коли дівчина просить дати їй час, щоб помолитись і розібратись з своїми почуттями і мотивами.
+    -   Досить поширене явище коли хлопець проявляє творчість, щоб зробити пропозицію. Проте дівчина також може проявити творчість, щоб сказати «ТАК».
 
 -   ### Небезпеки етапу
 
-    -   Не намагайтесь познайомитись з великою кількістю.
-    -   Не варто грати якусь надуману роль і не бути самим собою.
-    -   Не слід піддаватись почуттям типу «кохання з першого погляду».
-    -   Не варто робити остаточні висновки про людину від першого враження.
-    -   Можуть зав’язатись нездорові стосунки, яких потрібно буде уникати.
+    -   Не говоріть фразу «я тебе кохаю» до офіційної пропозиції, інакше в день пропозиції вона не буде мати ваги.
+    -   Не варто зловживати складними трюками до яких часто вдаються хлопці, щоб здивувати дівчину і переконати її вийти за нього заміж. Варто пам’ятати, що не сам момент пропозиції переконує дівчину, але все, що ви змогли показати дівчині в собі до цього.
+    -   Якщо дівчина хоче твердо сказати «НІ», не завжди варто робити це одразу, а добре все обдумати і сказати відмову хлопцю так, щоб не відбити у нього бажання утворювати сім’ю взагалі.
+    -   Не варто хлопцю робити пропозицію, чи дівчині давати відповідь, керуючись лише власним розумом. Варто радитись з близькими і старшими людьми, які вас обох добре знають, наприклад батьки чи служителі церкви.
 
 -   ### Молитви на цьому етапі
 
-    Господи направляй мене… Господи, дай бути уважним…
+    Господи дай відваги і готовності взяти відповідальність!
 
 -   ### Біблійний приклад
 
-    Історія Рут. “Випадок привів її на ділянку поля Боаза (майбутнього чоловіка)…” Рут 2:3
+    Історія кохання з книги «Пісня пісень» Ключовий вірш книги 2:7
 
--   ### Для обговорення з друзями
+-   ### Для обговорення з друзями:
 
     Запитання:
 
-    -   Чи личить дівчатам знайомитись першими?
-    -   Які «плюси» і «мінуси» сайтів знайомств?
-    -   Як подолати страх перед новими людьми?
-    -   Що робити якщо я не приваблива?
-
-    Стаття:
-
-    -   «Чи варто християнам звертатись у службу знайомств?» https://www.gotquestions.org/Ukrainian/Ukrainian-Christian-dating-service.html
+    -   Чому зазвичай хлопець має робити пропозицію, а не дівчина?
+    -   Чи може дівчина робити пропозицію? Чому?
+    -   Як подолати страх того, що тобі скажуть «Ні»?
 
     Відео:
 
-    -   Фільм «Рут». https://bogvideo.com/movies/kniga-ruf-puteshestvie-veryi-the-book-of-ruth-journey-of-faith/
-    -   Фільм «Табір, кльові хлопці». https://bogvideo.com/movies/lager-klevye-rebyata-2017/
+    -   [Серія передач «Запитай у тата»](https://www.youtube.com/watch?v=OtpFAJdProY&list=PLEJj389dP0LdHGrQBcuzDEM45LqRwH9KP&index=14)
+    -   [Серія Дошлюбна консультація «Покрокова інструкція до ваших відносин»](https://www.youtube.com/watch?v=9tFlY50DOu4&list=PLwZ6qnFVL8tvj0y8Oyi2b-W4PCsUO8L7E&index=10)
+
+    Аудіо:
+
+    -   [Аудіо книга «Життя без обмежень» Нік Вуйчич](https://t.me/vubrani_audio_knyhy/20)
