--- a/src/data/Симпатія.md
+++ b/src/data/Симпатія.md
@@ -30,9 +30,9 @@
 
     Відео:
 
-    -   Про симпатії та антипатії. https://youtube.com/watch?v=Khv3BjBbhxg&feature=share
-    -   Серії передач «Як з подругою» https://youtube.com/watch?v=Khv3BjBbhxg&feature=share
-    -   Фільм «Обмін». https://bogvideo.com/movies/obmen-2020/
+    -   [Про симпатії та антипатії](https://youtube.com/watch?v=Khv3BjBbhxg&feature=share)
+    -   [Серії передач «Як з подругою»](https://youtube.com/watch?v=Khv3BjBbhxg&feature=share)
+    -   [Фільм «Обмін»](https://bogvideo.com/movies/obmen-2020/)
 
     Запитання для обговорення з наставниками:
 
