--- a/src/data/Спільне рішення.md
+++ b/src/data/Спільне рішення.md
@@ -33,4 +33,4 @@
 
     Відео:
 
-    -   Фільм «Кільце для принцеси»: https://bogvideo.com/movies/koltso-dlya-printsessyi-2015/
+    -   [Фільм «Кільце для принцеси»](https://bogvideo.com/movies/koltso-dlya-printsessyi-2015/)
