--- a/src/data/Шлюб.md
+++ b/src/data/Шлюб.md
@@ -38,10 +38,10 @@
 
     Завдання:
 
-        -   Розпитати батьків про їх весілля і дізнатись що було добре, а що можна було б зробити по іншому.
+    -   Розпитати батьків про їх весілля і дізнатись що було добре, а що можна було б зробити по іншому.
 
     Відео:
 
-        -   «Запитай у тата» Чому потрібно вінчатись? https://www.youtube.com/watch?v=w9b-2TH0MPI
-        -   Серіал «Обраний» 1 сезон 5с. «Весільний подарунок» https://watch.thechosen.tv/video/184683594338
-        -   Фільм «Вогнетривкий» https://bogvideo.com/movies/ogneupornyj-2008/
+    -   [«Запитай у тата» Чому потрібно вінчатись?](https://www.youtube.com/watch?v=w9b-2TH0MPI)
+    -   [Серіал «Обраний» 1 сезон 5с «Весільний подарунок»](https://watch.thechosen.tv/video/184683594338)
+    -   [Фільм «Вогнетривкий»](https://bogvideo.com/movies/ogneupornyj-2008/)
