--- a/src/data/Залицяння.md
+++ b/src/data/Залицяння.md
@@ -42,7 +42,7 @@
 
     2 Сам. 13 розділ. Негативний приклад Амнона і Тамари.
 
--   ### Для обговорення з друзями:
+-   ### Для обговорення з друзями
 
     Запитання:
 
