--- a/src/data/Заручини.md
+++ b/src/data/Заручини.md
@@ -30,7 +30,7 @@
 
     Мт 1:18-25 Приклад поведінки Йосипа і Марії після заручин
 
--   ### Для обговорення з друзями:
+-   ### Для обговорення з друзями
 
     Порозмовляйте з батьками:
 
