--- a/src/data/Симпатія.md
+++ b/src/data/Симпатія.md
@@ -26,7 +26,7 @@
 
     Буття 24 розділ. Як слуга Авраама обирав наречену для Ісака.
 
--   ### Для обговорення з друзями:
+-   ### Для обговорення з друзями
 
     Відео:
 
