--- a/src/data/Спільне рішення.md
+++ b/src/data/Спільне рішення.md
@@ -23,7 +23,7 @@
 
     Буття 29 розділ. Яків покохав Рахіль, але після спільного рішення пройшли ще непростих сім років поки стали сім’єю.
 
--   ### Для обговорення з друзями:
+-   ### Для обговорення з друзями
 
     Запитання:
 
