--- a/src/data/Шлюб.md
+++ b/src/data/Шлюб.md
@@ -34,7 +34,7 @@
 
     Івана 2 р. Весілля в Канні Галілейській
 
--   ### Для обговорення з друзями:
+-   ### Для обговорення з друзями
 
     Завдання:
 
