--- a/src/data/Пропозиція.md
+++ b/src/data/Пропозиція.md
@@ -26,7 +26,7 @@
 
     Історія кохання з книги «Пісня пісень» Ключовий вірш книги 2:7
 
--   ### Для обговорення з друзями:
+-   ### Для обговорення з друзями
 
     Запитання:
 
