--- a/src/data/Заручини.md
+++ b/src/data/Заручини.md
@@ -7,10 +7,10 @@
     -   Це офіційна згода двох родин і церкви на підготовку до весілля
     -   Як правило заручини відбуваються у домі нареченої. Запрошені найближчі рідні з обох сторін, а також служителі церкви.
     -   Зазвичай на заручинах обговорюються такі питання:
-        o Як молоді зрозуміли Божу волю на одруження
-        o Коли і де планується весілля
-        o Різні технічні питання щодо вінчання і весілля
-        o Де планують жити молоді після одруження
+        -   Як молоді зрозуміли Божу волю на одруження
+        -   Коли і де планується весілля
+        -   Різні технічні питання щодо вінчання і весілля
+        -   Де планують жити молоді після одруження
     -   Заручини можуть бути гарним моментом знайомства родин
     -   Після проведення заручин про цю подію оголошують в церкві і моляться прохаючи благословіння на підготовку до весілля.
     -   Заручини дають право на проведення часу разом для підготовки до шлюбу
