--- a/src/data/Симпатія.md
+++ b/src/data/Симпатія.md
@@ -31,7 +31,7 @@
     Відео:
 
     -   [Про симпатії та антипатії](https://youtube.com/watch?v=Khv3BjBbhxg&feature=share)
-    -   [Серії передач «Як з подругою»](https://youtube.com/watch?v=Khv3BjBbhxg&feature=share)
+    -   [Серії передач «Як з подругою»](https://youtu.be/nxM7yCbuqxE)
     -   [Фільм «Обмін»](https://bogvideo.com/movies/obmen-2020/)
 
     Запитання для обговорення з наставниками:
