--- a/src/data/Шлюб.md
+++ b/src/data/Шлюб.md
@@ -6,11 +6,11 @@
 
     -   На святковому зібранні церкви відбувається вінчання молодих
     -   Важливі елементи шлюбної церемонії:
-        o Настанова від пастора церкви.
-        o Виголошення нареченими шлюбних обітниць.
-        o Молитви батьків і пастора, який вінчає.
-        o Молитва наречених.
-        o Привітання і побажання від церкви та гостей.
+        -   Настанова від пастора церкви.
+        -   Виголошення нареченими шлюбних обітниць.
+        -   Молитви батьків і пастора, який вінчає.
+        -   Молитва наречених.
+        -   Привітання і побажання від церкви та гостей.
     -   Весільний бенкет планується виходячи з матеріальних можливостей родин.
     -   Важливо заздалегідь продумати місце першої шлюбної ночі і перших тижнів спільного життя.
     -   Гарне і радісне весілля надихає інших молодих людей на утворення сім’ї і допомагає одруженим освіжити свої стосунки у шлюбі.
